Update 'go-wyhbbrjr' component image to: quay.io/rhtap_qe/go-wyhbbrjr:24d88ae0d190bd879b0a40b9be9cc1f33347b75e@sha256:6a50187f09a3df4cc34a49721e5afd0042526db2e4fe080737a6e69d8a7fc47c

--- a/components/go-wyhbbrjr/overlays/development/deployment-patch.yaml
+++ b/components/go-wyhbbrjr/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: go-wyhbbrjr
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/rhtap-task-runner:latest
-        name: container-image  
+        - image: quay.io/rhtap_qe/go-wyhbbrjr:24d88ae0d190bd879b0a40b9be9cc1f33347b75e@sha256:6a50187f09a3df4cc34a49721e5afd0042526db2e4fe080737a6e69d8a7fc47c
+          name: container-image
